@@ -1,4 +1,5 @@
 X   X   
+    * Add Sword + Feather Falling = launch victim (right-click)
     * Add Boots + Feather Falling X = zero fall damage
 
 2012-03-13  0.8.2
